--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -10,7 +10,7 @@
 
 <!-- ここをあなたの WebSocket サーバのエンドポイントに変更してください -->
 <script>
-const WS_SERVER = 'wss://your-ws-server.example.com';
+const WS_SERVER = 'wss://comment-viewer.vercel.app';
 </script>
 
 
