--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -1,117 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <title>YouTube Live Chat Viewer</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial; padding:20px; max-width:900px; margin:auto}
-    header{display:flex; gap:8px; align-items:center; margin-bottom:12px}
-    input[type="text"]{flex:1; padding:8px; font-size:16px}
-    button{padding:8px 12px; font-size:16px}
-    #status{margin-left:8px; font-size:14px}
-    #logs{border:1px solid #ddd; padding:8px; height:60vh; overflow:auto; background:#fafafa}
-    .chat{display:flex; gap:10px; padding:6px 4px; border-bottom:1px solid #eee; align-items:center}
-    .thumb{width:40px; height:40px; border-radius:6px; object-fit:cover}
-    .meta{font-size:13px; color:#333}
-    .msg{font-size:15px; margin-top:2px}
+    body { font-family: sans-serif; }
+    #chat { border: 1px solid #ccc; padding: 8px; height: 300px; overflow-y: auto; }
   </style>
 </head>
 <body>
-  <h1>YouTubeライブ コメント (リアルタイム)</h1>
+  <h1>YouTube Live Chat Viewer</h1>
 
-  <div id="controls">
-    <div style="display:flex; align-items:center;">
-      <input id="videoUrl" type="text" placeholder="https://www.youtube.com/watch?v=XXXXX または https://www.youtube.com/live/XXXXX" />
-      <button id="connectBtn">接続</button>
-      <span id="status">未接続</span>
-    </div>
-  </div>
+  <input id="url" placeholder="https://www.youtube.com/live/xxxx" size="50" />
+  <button id="connect">接続</button>
 
-  <div id="logs" aria-live="polite"></div>
+  <div id="chat"></div>
 
   <script>
-    // ここを自身の WebSocket サーバーに変更
-    const WS_SERVER = "wss://comment-viewer.vercel.app";
+    let timer = null;
 
-    const connectBtn = document.getElementById("connectBtn");
-    const videoUrlInput = document.getElementById("videoUrl");
-    const statusEl = document.getElementById("status");
-    const logs = document.getElementById("logs");
+    document.getElementById("connect").onclick = () => {
+      const url = document.getElementById("url").value;
+      const liveId = url.split("/").pop();
 
-    let ws = null;
-    let subscribedUrl = null;
+      if (timer) clearInterval(timer);
 
-    function appendChat(chat){
-      const el = document.createElement("div");
-      el.className = "chat";
-      const thumb = document.createElement("img");
-      thumb.className = "thumb";
-      thumb.src = chat.authorThumbnail || "";
-      thumb.alt = chat.author || "";
-      thumb.onerror = () => { thumb.style.display = 'none'; };
-      const body = document.createElement("div");
-      body.style.flex = "1";
-      body.innerHTML = `<div class="meta"><strong>${escapeHtml(chat.author||"匿名")}</strong> <span style="color:#666; font-size:12px;">${new Date(chat.timestamp||Date.now()).toLocaleTimeString()}</span></div>
-                        <div class="msg">${escapeHtml(chat.message||"")}</div>`;
-      el.appendChild(thumb);
-      el.appendChild(body);
-      logs.appendChild(el);
-      logs.scrollTop = logs.scrollHeight;
-    }
+      timer = setInterval(async () => {
+        const res = await fetch(`/api/chat?liveId=${liveId}`);
+        const data = await res.json();
 
-    function escapeHtml(s){
-      return String(s)
-        .replace(/&/g,"&amp;")
-        .replace(/</g,"&lt;")
-        .replace(/>/g,"&gt;")
-        .replace(/"/g,"&quot;")
-        .replace(/'/g,"&#039;");
-    }
-
-    function setStatus(s){
-      statusEl.textContent = s;
-    }
-
-    connectBtn.addEventListener("click", () => {
-      const url = videoUrlInput.value.trim();
-      if(!url) { alert("YouTubeのライブURLを入力してください"); return; }
-      if(!ws || ws.readyState !== WebSocket.OPEN){
-        ws = new WebSocket(WS_SERVER);
-        setStatus("接続中...");
-        ws.addEventListener("open", () => {
-          setStatus("接続済み");
-          // subscribe メッセージを送る（サーバ側とプロトコルを合わせる）
-          ws.send(JSON.stringify({ type: "subscribe", url }));
-          subscribedUrl = url;
+        const chat = document.getElementById("chat");
+        chat.innerHTML = "";
+        data.forEach(c => {
+          const div = document.createElement("div");
+          div.textContent = `[${c.author}] ${c.message}`;
+          chat.appendChild(div);
         });
-        ws.addEventListener("message", (ev) => {
-          try{
-            const msg = JSON.parse(ev.data);
-            if(msg.type === "chat") appendChat(msg.data);
-            else if(msg.type === "info") {
-              // server info
-              const p = document.createElement("div");
-              p.textContent = "[info] " + (msg.text||"");
-              logs.appendChild(p);
-            }
-          }catch(e){
-            console.warn("message parse error", e);
-          }
-        });
-        ws.addEventListener("close", () => setStatus("切断"));
-        ws.addEventListener("error", (e) => setStatus("エラー"));
-      } else {
-        // already connected, just subscribe a new url
-        ws.send(JSON.stringify({ type: "subscribe", url }));
-        subscribedUrl = url;
-      }
-    });
-
-    // 自動切断のための unload ハンドラ
-    window.addEventListener("beforeunload", () => {
-      if(ws && ws.readyState === WebSocket.OPEN) ws.close();
-    });
+      }, 3000);
+    };
   </script>
 </body>
 </html>
