--- a/public/index.html
+++ b/public/index.html
@@ -5,38 +5,45 @@
   <title>YouTube Live Chat Viewer</title>
   <style>
     body { font-family: sans-serif; }
-    #chat { border: 1px solid #ccc; padding: 8px; height: 300px; overflow-y: auto; }
+    #chat { border: 1px solid #ccc; height: 400px; overflow-y: auto; padding: 8px; }
   </style>
 </head>
 <body>
-  <h1>YouTube Live Chat Viewer</h1>
+  <h1>YouTube Live コメントビューア</h1>
 
-  <input id="url" placeholder="https://www.youtube.com/live/xxxx" size="50" />
+  <input id="url" type="text" placeholder="YouTube Live URL" size="60" />
   <button id="connect">接続</button>
 
   <div id="chat"></div>
 
   <script>
-    let timer = null;
+    const chatDiv = document.getElementById("chat");
+    const ws = new WebSocket(
+      location.protocol === "https:"
+        ? `wss://${location.host}`
+        : `ws://${location.host}`
+    );
+
+    ws.onmessage = (e) => {
+      const data = JSON.parse(e.data);
+      if (data.type === "chat") {
+        const div = document.createElement("div");
+        div.textContent = `${data.author}: ${data.message}`;
+        chatDiv.appendChild(div);
+        chatDiv.scrollTop = chatDiv.scrollHeight;
+      }
+    };
 
     document.getElementById("connect").onclick = () => {
       const url = document.getElementById("url").value;
-      const liveId = url.split("/").pop();
+      const liveId = new URL(url).searchParams.get("v");
 
-      if (timer) clearInterval(timer);
-
-      timer = setInterval(async () => {
-        const res = await fetch(`/api/chat?liveId=${liveId}`);
-        const data = await res.json();
-
-        const chat = document.getElementById("chat");
-        chat.innerHTML = "";
-        data.forEach(c => {
-          const div = document.createElement("div");
-          div.textContent = `[${c.author}] ${c.message}`;
-          chat.appendChild(div);
-        });
-      }, 3000);
+      ws.send(
+        JSON.stringify({
+          type: "connect",
+          liveId,
+        })
+      );
     };
   </script>
 </body>
