--- a/public/index.html
+++ b/public/index.html
@@ -752,7 +752,7 @@ function displayMessage(data) {
         // メッセージHTMLの構築
         messageEl.innerHTML = `
           <div class="author-avatar">
-            ${avatarUrl ? `<img src="${avatarUrl}" alt="${author.name}" crossorigin="anonymous" onerror="this.style.display='none'; this.parentElement.innerHTML='<div style=\"background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary)); width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold; border-radius: 8px;\">${author.name ? author.name.charAt(0) : '?'}</div>';" />` : 
+            ${avatarUrl ? `<img src="${avatarUrl}" alt="${author.name}" crossorigin="anonymous" onerror="this.style.display='none'; this.parentElement.innerHTML='<div style=\"background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary)); width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold; border-radius: 8px;\">${author.name ? author.name.charAt(0) : '?'}</div>` : 
               `<div style="background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary)); width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold; border-radius: 8px;">${author.name ? author.name.charAt(0) : '?'}</div>`}
           </div>
           <div class="message-content">
